--- a/board-back/src/main/resources/application.properties
+++ b/board-back/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+# === Application Info === #
 spring.application.name=board-back
 server.port=8080
 
-# secret profile active
-spring.profiles.active=secret
+# === Active Profile === #
+spring.profiles.active=secret, dev
 
-
+# === Database === #
+spring.datasource.url=jdbc:mysql://localhost:3306/board_v1
